welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:6: error: not found: value c
			Schema(c:Color);
                               ^